workspace/servicemesh/istio-ingressgateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-istio-ingressgateway
  namespace: istio-system
  labels:
    name: alb-istio-ingress-gateway
  annotations:
    # 인터넷 연결 Application Load Balancer 생성
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: alb-01
    # 80, 443 포트에 대한 리스너 생성
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    # ACM 인증서 ARN을 ALB의 443 포트 리스너와 연결
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:<aws_account_id>:certificate/<aws arn>" # need to change
    # 모든 HTTP 리스너는 default action으로 HTTPS로 redirect되며, 다른 규칙을 무시한다.
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: <Domain> # need to change
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
